--- a/hamdash.html
+++ b/hamdash.html
@@ -16,7 +16,7 @@
     />
     <title>Ham Radio Dashboard</title>
     <!--
-	Hamdash
+	index
 	License: MIT
   Copyright (c) 2024 Pablo Sabbag, VA3HDL
 	https://www.va3hdl.com/projects/hamdash
